--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,6 +9,10 @@ body{
   font-family: 'Inconsolata', arial;
 }
 
+h1 , h2 {
+  text-align: center;
+}
+
 .container {
   margin: 40px auto;
   padding: 40px;
